# rust_documents

./: .gitignore  AAA.md  README.md  api.md  api_axum.md  asynchronous.md  attributes.md  base.md  borrowing.md  concept.md  concurrency.md  condition.md  error.md  function.md  generic.md  lifetime.md  loop.md  model.md  modularity.md  oop.md  operator.md  orm.md  orm_diesel.md  orm_seaorm.md  ownership.md  pubsub_nats.md  readme.md  smartpointer.md  tools.md  trait.md  type.md  variable.md
api_1/: .env  API_DOCUMENTATION.md  Cargo.toml  README.md  db_postgres.sql  task.txt
api_1/src/: args.rs  main.rs
api_1/src/api/: mod.rs
api_1/src/api/handlers/: user.rs
api_1/src/api/middleware/: mod.rs
api_1/src/api/routes/: user.rs
api_1/src/api/services/: user.rs
api_1/src/logics/: admin.rs  general.rs  mod.rs  user.rs
api_1/src/models/: user.rs
api_1/src/orm/: mod.rs  user.rs
api_1/src/orm/logics/: user.rs
api_1/src/orm/models/: general.rs  mod.rs
orm_1/: Cargo.toml  README.md  db_postgres.sql
orm_1/src/: main.rs
orm_1/src/logics/: user.rs
orm_1/src/models/: user.rs
