[package]
name = "api_1"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
dotenvy = "0.15.7"
sea-orm = { version = "1.1.14", default-features = false, features = ["sqlx-mysql", "sqlx-postgres", "sqlx-sqlite", "runtime-async-std-rustls", "runtime-tokio-rustls", "macros", "debug-print", "seaography", "with-uuid", "with-chrono", "with-json", "with-bigdecimal", "with-time"] }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde_json = "1.0.142"
thiserror = "2.0.15"
